Avoid covering line numbers with overlays, so people don't think that line numbers are selected too.

--- a/src/css/ymacs-dark.css
+++ b/src/css/ymacs-dark.css
@@ -24,7 +24,7 @@
 }
 
 .Ymacs-Theme-dark .Ymacs_Overlay .match-paren { background: #8f8; }
-.Ymacs-Theme-dark .Ymacs_Overlay .selection { background: #fff; }
+.Ymacs-Theme-dark .Ymacs_Overlay .selection { background: #ccf; }
 
 .Ymacs-Theme-dark .Ymacs_Modeline {
   background-color: #cbe;
