--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -26,7 +26,7 @@
   -moz-border-radius: 15px;
 }
 
-.Ymacs_Overlay { position: absolute; width: 100%; opacity: 0.5; }
+.Ymacs_Overlay { position: absolute; right: 0; opacity: 0.5; }
 .Ymacs_Overlay .match-paren { opacity: 0.4; }
 .Ymacs_Overlay .selection { opacity: 0.7; }
 
